# Alorthim

./: CMakeLists.txt  common.c  common.h  main.c
sort/: bubble_sort.c  bubble_sort.h  insert_sort.c  insert_sort.h  quick_sort.c  quick_sort.h  shell_sort.c  shell_sort.h
